# pgsparql

./: configure.ac
extension/: Makefile.am  pgsparql--0.1.sql  pgsparql.control
extension/pgsparql/: aggregate.sql  arithmetic.sql  blanknode.sql  cast.sql  extract.sql  functions.sql  logical.sql  numeric.sql  rdfbox.sql  zoneddate.sql  zoneddatetime.sql
extension/pgsparql-0.1/: aggregate.sql  arithmetic.sql  blanknode.sql  cast.sql  comparison.sql  extract.sql  functions.sql  header.sql  logical.sql  rdfbox.sql  zoneddate.sql  zoneddatetime.sql
m4/: ax_lib_postgresql.m4
sql/: rdfbox.sql
src/: Makefile.am  call.h  compare.h  constants.c  constants.h  create.c  create.h  pgsparql.h  rdfbox.c  rdfbox.h  try-catch.h  xsd.h
src/arithmetic/: addition.c  division.c  multiplication.c  subtraction.c  uminus.c
src/cast/: boolean.c  cast.h  date.c  datetime.c  daytimeduration.c  decimal.c  double.c  float.c  int.c  integer.c  long.c  rdfbox.c  short.c  string.c
src/comparison/: comparison.h  equal.c  greater_than.c  less_than.c  not_equal.c  not_greater_than.c  not_less_than.c
src/date/: date.c  date.h  datetime.c  datetime.h  daytimeduration.c  daytimeduration.h  timezone.c  timezone.h
src/functions/: aggregate.c  datetime.c  extract.c  functional.c  logical.c  numeric.c  rdfterm.c  regex.c  string.c
src/logical/: ebv.c
src/rdfbox/: arithmetic.c  comparison.c  constructors.c  derivate.c  getters.c  order.c  order.h  promotion.h  rdfbox.c  rdfbox.h  syntax.c  syntax.h  xsd.h
src/types/: date.c  date.h  datetime.c  datetime.h  daytimeduration.c  daytimeduration.h  decimal.c  double.c  double.h  float.c  float.h  iblanknode.c  iblanknode.h  sblanknode.c  sblanknode.h  timezone.c  timezone.h
tests/: psql_tests.bash  run.sh
tests/cast/: boolean.bats  date.bats  datetime.bats  daytimeduration.bats  decimal.bats  double.bats  float.bats  int.bats  integer.bats  long.bats  short.bats  string.bats
tests/functions/: aggregate.bats  datatime.bats  logical.bats  numeric.bats  rdfterm.bats  regex.bats  string.bats
tests/rdfbox/: arithmetic.bats  comparison.bats  constructors.bats  getters.bats  input_output.bats  order.bats  promotion.bats  receive_send.bats
tests/types/: date.bats  datetime.bats  decimal.bats  double.bats  float.bats  iblanknode.bats  sblanknode.bats
